# Desktop-Monitoring-System

./: .env.example  .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml
agent/: CMakeLists.txt  Enroll-RDMAgents.ps1  build.bat  install-service.ps1  installer.nsi  ops.ps1  pcs.csv.example  rdm-agent.toml.example  vcpkg.json
agent/src/: config.cpp  config.hpp  identity.cpp  identity.hpp  main.cpp
agent/src/activity/: activity_tracker.cpp  activity_tracker.hpp
agent/src/capture/: screen_capture.cpp  screen_capture.hpp
agent/src/encoder/: h264_encoder.cpp  h264_encoder.hpp  video_encoder.cpp  video_encoder.hpp
agent/src/heartbeat/: heartbeat.cpp  heartbeat.hpp
agent/src/service/: windows_service.cpp
agent/src/webrtc/: peer_connection.cpp  peer_connection.hpp  signaling_client.cpp  signaling_client.hpp
backend-api/: .env.example  Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend-api/app/: config.py  db.py  main.py  models.py
backend-api/app/middleware/: auth.py  logging.py
backend-api/app/routes/: __init__.py  alerts.py  auth.py  devices.py  logs.py  metrics.py  stream.py  users.py  webhooks.py
backend-api/app/services/: __init__.py  webhook.py
backend-api/tests/: conftest.py  test_alerts.py  test_auth.py  test_devices.py  test_logs.py  test_users.py  test_webhooks.py
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
frontend/e2e/: auth.spec.js  dashboard.spec.js  helpers.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AlertToast.jsx  DeviceTile.jsx  Layout.jsx  StatusBadge.jsx
frontend/src/hooks/: useAlertBadge.js  useSSE.js  useWebRTC.js
frontend/src/lib/: api.js
frontend/src/pages/: AlertsPage.jsx  DashboardPage.jsx  DevicePage.jsx  LoginPage.jsx  LogsPage.jsx  UsersPage.jsx  WebhooksPage.jsx
frontend/src/store/: auth.js
infra/: docker-compose.yml  setup-server.sh
infra/coturn/: turnserver.conf
infra/grafana/provisioning/dashboards/: dashboard.yml  rdm-overview.json
infra/grafana/provisioning/datasources/: prometheus.yml
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
signaling-server/: Dockerfile  package-lock.json  package.json
signaling-server/src/: auth.js  deviceManager.js  index.js  rateLimit.js  signaling.js  turnCredentials.js
signaling-server/tests/: deviceManager.test.js  rateLimit.test.js  turnCredentials.test.js
